create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -710,6 +710,20 @@ iframe.lazy-placeholder,
 section.lazy-placeholder:after {
   opacity: 0.3;
 }
+.cid-s5GegEfZSA {
+  background: #232323;
+  padding-top: 120px;
+  padding-bottom: 0px;
+  background: linear-gradient(0deg, #232323, #232323);
+}
+.cid-s5GegEfZSA .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-s5GegEfZSA .video-block {
+    width: 100% !important;
+  }
+}
 .cid-s4UiN7qayC .navbar {
   background: #000000;
   transition: none;
